2003-03-31  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* fsinfo/fsinfo.8: typo co-ordinate -> coordinate.  Typo report
	from Perry E. Metzger" <perry@piermont.com>.

2003-03-25  Erez Zadok  <ezk@filer.fsl.cs.sunysb.edu>

	* include/am_defs.h: Don't include malloc.h if stdlib.h exists,
	because modern systems (e.g., BSD) complain if you use malloc.h
	instead of stdlib.h.  Let's hope there are no systems out
	there that need both.

2003-03-20  Erez Zadok  <ezk@suse73.fsl.cs.sunysb.edu>

	* minor new port: sparc64-unknown-linux-suse7.3.

2003-03-20  Erez Zadok  <ezk@a-freebsd5.fsl.cs.sunysb.edu>

	* minor new port: i386-unknown-freebsd5.0.

	* configure.in: detect nfsclient/nfsargs.h.

	* conf/nfs_prot/nfs_prot_freebsd3.h: include
	<nfsclient/nfsargs.h>, needed in FreeBSD 5.0.

2003-03-15  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* amd/amd.8, amd/amd.8, fixmount/fixmount.8, hlfsd/hlfsd.8,
	scripts/amd.conf.5, scripts/expn.1: minor spell checking and
	extraneous space elimination.

2003-03-07  Ion Badulescu  <ionut@buggy.badula.org>

	* conf/autofs/autofs_linux.c (autofs_get_fh): don't leak file
	descriptors if limit exceeded
	(autofs_mounted): call autofs_get_mp(); init am_autofs_ttl
	(autofs_release_fh): release pending_mounts and pending_umounts
	queues
	(autofs_timeout_mp): update am_autofs_ttl instead of am_ttl

	* amd/mntfs.c (init_mntfs): delete initialization of removed
	mf_autofs_fh
	(uninit_mntfs): delete call to autofs_release_fh()

	* amd/map.c (init_map): init autofs_fh to 0, delete initialization
	of removed autofs_data
	(free_map): release autofs_fh after unmounting map; delete call to
	autofs_free_data()
	(umount_exported): call autofs_release_mp() prior to unmounting
	autofs f/s
	(unmount_mp): ditto
	(free_map_if_success): call autofs_get_mp() if unmounting fails
	(timeout_mp): use the dedicated am_autofs_ttl timeout for f/s-wide
	timeouts instead of the per-mountpoint am_ttl

	* amd/autil.c (am_unmounted): release autofs_fh after unmounting